# booking_shop_api

./: .gitignore  pyproject.toml
book/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_book_page_count.py  0003_alter_book_page_count.py  0004_alter_book_page_count.py  0005_book_view_count.py  0006_book_image.py  0007_alter_book_image.py
root/: settings.py  urls.py
templates/: book_changelist.html
